; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/libbsm/extr_bsm_errno.c_au_strerror.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/libbsm/extr_bsm_errno.c_au_strerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bsm_errno = type { i64, i8* }

@.str = private unnamed_addr constant [23 x i8] c"Unrecognized BSM error\00", align 1
@ERRNO_NO_LOCAL_MAPPING = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @au_strerror(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.bsm_errno*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call %struct.bsm_errno* @bsm_lookup_errno_bsm(i32 %5)
  store %struct.bsm_errno* %6, %struct.bsm_errno** %4, align 8
  %7 = load %struct.bsm_errno*, %struct.bsm_errno** %4, align 8
  %8 = icmp eq %struct.bsm_errno* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %25

10:                                               ; preds = %1
  %11 = load %struct.bsm_errno*, %struct.bsm_errno** %4, align 8
  %12 = getelementptr inbounds %struct.bsm_errno, %struct.bsm_errno* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @ERRNO_NO_LOCAL_MAPPING, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %10
  %17 = load %struct.bsm_errno*, %struct.bsm_errno** %4, align 8
  %18 = getelementptr inbounds %struct.bsm_errno, %struct.bsm_errno* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = call i8* @strerror(i64 %19)
  store i8* %20, i8** %2, align 8
  br label %25

21:                                               ; preds = %10
  %22 = load %struct.bsm_errno*, %struct.bsm_errno** %4, align 8
  %23 = getelementptr inbounds %struct.bsm_errno, %struct.bsm_errno* %22, i32 0, i32 1
  %24 = load i8*, i8** %23, align 8
  store i8* %24, i8** %2, align 8
  br label %25

25:                                               ; preds = %21, %16, %9
  %26 = load i8*, i8** %2, align 8
  ret i8* %26
}

declare dso_local %struct.bsm_errno* @bsm_lookup_errno_bsm(i32) #1

declare dso_local i8* @strerror(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
